[gd_scene load_steps=2 format=3 uid="uid://cu6mupu6sae4k"]

[ext_resource type="Script" path="res://Experience_player.gd" id="1_c80tu"]

[node name="Experience_Player" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_c80tu")

[node name="Label_Experience" type="Label" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Current value"
horizontal_alignment = 2

[node name="Label_Experience_required" type="Label" parent="."]
layout_mode = 0
offset_left = 142.0
offset_right = 248.0
offset_bottom = 23.0
text = "Required value"

[node name="Label_Under_Experience" type="Label" parent="."]
layout_mode = 0
offset_left = 120.0
offset_right = 160.0
offset_bottom = 23.0
text = "/"

[node name="Label_Level_Text" type="Label" parent="."]
layout_mode = 0
offset_left = 90.0
offset_top = 29.0
offset_right = 196.0
offset_bottom = 52.0
text = "Level"

[node name="Label_Level" type="Label" parent="."]
layout_mode = 0
offset_left = 142.0
offset_top = 29.0
offset_right = 248.0
offset_bottom = 52.0
text = "Current value
"
